# Oiak_projekt

./: BBasembler.cpp  BBasembler.h  BbAlgorithm.h  CMakeLists.txt  DataGenerator.h  FileReader.h  Menu.h  NehAlgorithm.h  Test.h  Timer.h  bb_algorithm.s  flowshop.txt  main.cpp  makefile  neh_assembler.s  oiak_c_bb.s
pliki testowe 1-90/: ta001.txt  ta002.txt  ta003.txt  ta004.txt  ta005.txt  ta006.txt  ta007.txt  ta008.txt  ta009.txt  ta010.txt  ta011.txt  ta012.txt  ta013.txt  ta014.txt  ta015.txt  ta016.txt  ta017.txt  ta018.txt  ta019.txt  ta020.txt  ta021.txt  ta022.txt  ta023.txt  ta024.txt  ta025.txt  ta026.txt  ta027.txt  ta028.txt  ta029.txt  ta030.txt  ta031.txt  ta032.txt  ta033.txt  ta034.txt  ta035.txt  ta036.txt  ta037.txt  ta038.txt  ta039.txt  ta040.txt  (+49 more)
pliki testowe 91-120/: ta091.txt  ta092.txt  ta093.txt  ta094.txt  ta095.txt  ta096.txt  ta097.txt  ta098.txt  ta099.txt  ta100.txt  ta101.txt  ta102.txt  ta103.txt  ta104.txt  ta105.txt  ta106.txt  ta107.txt  ta108.txt  ta109.txt  ta110.txt  ta111.txt  ta112.txt  ta113.txt  ta114.txt  ta115.txt  ta116.txt  ta117.txt  ta118.txt  ta119.txt  ta120.txt
wyniki/: asm.txt  cpp.txt
